# Baml-BoundaryML

./: .gitignore  README.md  pyproject.toml
app/: main.py
baml_client/: __init__.py  async_client.py  async_request.py  config.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  tracing.py  type_builder.py  types.py
baml_src/: clients.baml  planner.baml  resume.baml
